# sqla-repository

./: README.md  pyproject.toml
.github/: copilot-instructions.md  instructions.md
.github/copilot-skills/: chore.instructions.md  release.instructions.md
.github/workflows/: build-wheels.yml  build.yml  ci.yml
src/sqla_repository/: __init__.py  async_repository.py  core.py
src/sqlrepository/: __init__.py  async_repository.py  core.py
tests/: conftest.py  models.py  repositories.py  sqlmodel_models.py  test_async_repository.py  test_async_sqlmodel_repository.py  test_dummy.py  test_repository.py  test_sqlmodel_repository.py
