[project]
name = "sqla-repository"
version = "0.1.8"
description = "A SQLAlchemy repository implementation inspired by JPA Repositories."
authors = [
    {name = "Christoph Stotzer",email = "christoph.stotzer@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
]

[dependency-groups]
sqlmodel = [
    "sqlmodel (>=0.0.34,<0.1.0)"
]
async = [
    "aiosqlite (>=0.20.0,<0.21.0)",
    "greenlet (>=3.2.0,<4.0.0)",
]
dev = [
    "pytest (>=8.2.0,<9.0.0)",
    "pytest-coverage (>=0.0,<0.1)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    { include-group = "sqlmodel" },
    { include-group = "async" }
]
gen = [
    "sqlacodegen (>=3.2.0,<4.0.0)"
]

[tool.poetry.group.gen]
optional = true

[tool.poetry]
packages = [
    { include = "sqla_repository", from = "src" },
  ]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]

[tool.pytest]
pythonpath = ["src"]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
    "integration",
]